# life-editor

./: .gitattributes  .gitignore  .ignore  .mcp.json  CHANGELOG.md  README.md  TODO.md  ai-context.md  asakan-yukan-theme.html  code-review-report.md  electron-builder.yml  package-lock.json  package.json
.claude/: 2026-04-21-routine-dup-fix.md  2026-04-22-mobile-data-parity-phase-b-attempted.md  2026-04-25-refactoring-plan.md  2026-04-25-sidebar-tags-free-pomodoro.md  2026-04-26-refactoring-verification-plan.md  2026-04-26-windows-android-port.md  2026-04-29-server-authoritative-migration.md  2026-04-29-web-first-migration.md  2026-05-04-cross-platform-migration.md  CLAUDE.md  HISTORY-archive.md  HISTORY-archive.md.bak  HISTORY.md  MEMORY.md  settings.json
cloud/: package-lock.json  package.json  wrangler.toml
demo/: mobile-work-demo.html
desktop/: README.md  electron-builder.yml  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_archive.rs  file_watcher.rs  lib.rs  main.rs  menu.rs  reminder.rs  shortcuts.rs  tray.rs
src-tauri/src/commands/: app_settings_commands.rs  attachment_commands.rs  calendar_commands.rs  calendar_tag_commands.rs  claude_commands.rs  copy_commands.rs  custom_sound_commands.rs  daily_commands.rs  data_io_commands.rs  database_commands.rs  diagnostics_commands.rs  files_commands.rs  memo_commands.rs  mod.rs  note_commands.rs  note_connection_commands.rs  note_link_commands.rs  paper_board_commands.rs  playlist_commands.rs  pomodoro_preset_commands.rs  reminder_commands.rs  routine_commands.rs  routine_group_assignment_commands.rs  routine_group_commands.rs  routine_tag_commands.rs  schedule_item_commands.rs  shell_commands.rs  sidebar_link_commands.rs  sound_commands.rs  sync_commands.rs  system_commands.rs  task_commands.rs  template_commands.rs  terminal_commands.rs  time_memo_commands.rs  timer_commands.rs  updater_commands.rs  wiki_tag_commands.rs  wiki_tag_connection_commands.rs  wiki_tag_group_commands.rs
src-tauri/src/db/: app_settings_repository.rs  attachment_repository.rs  calendar_repository.rs  calendar_tag_repository.rs  custom_sound_repository.rs  daily_repository.rs  database_repository.rs  helpers.rs  memo_repository.rs  migrations.rs  mod.rs  note_connection_repository.rs  note_link_repository.rs  note_repository.rs  paper_board_repository.rs  playlist_repository.rs  pomodoro_preset_repository.rs  routine_group_assignment_repository.rs  routine_group_repository.rs  routine_repository.rs  routine_tag_repository.rs  row_converter.rs  schedule_item_repository.rs  sidebar_link_repository.rs  sound_repository.rs  task_repository.rs  template_repository.rs  time_memo_repository.rs  timer_repository.rs  wiki_tag_connection_repository.rs  wiki_tag_group_repository.rs  wiki_tag_repository.rs
src-tauri/src/db/migrations/: full_schema.rs  mod.rs  util.rs  v2_v30.rs  v31_v60.rs  v61_plus.rs
src-tauri/src/sync/: http_client.rs  mod.rs  sync_engine.rs  types.rs
src-tauri/src/terminal/: claude_detector.rs  mod.rs  pty_manager.rs
src-tauri/tests/: schedule_item_path_parity.rs
(+2222 files in other folders)
